fix(client): rebuild immersive table projection and layout